# ezdwg

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_read.py  plot.py  query_types.py  text_mtext.py
examples/data/: mtext_2000.dwg  text_2000.dwg
src/: api.rs  lib.rs
src/bit/: bit_codec_r2000.rs  bit_reader.rs  mod.rs
src/container/: mod.rs  section_directory.rs  section_loader.rs  stream_view.rs
src/core/: config.rs  error.rs  mod.rs  result.rs
src/dwg/: decoder.rs  file_open.rs  mod.rs  r2004.rs  r2007.rs  version.rs
src/entities/: arc.rs  attrib.rs  circle.rs  common.rs  dim_diameter.rs  dim_linear.rs  dim_radius.rs  ellipse.rs  hatch.rs  insert.rs  leader.rs  line.rs  lwpolyline.rs  minsert.rs  mod.rs  mtext.rs  point.rs  polyline_2d.rs  seqend.rs  spline.rs  text.rs  vertex_2d.rs
src/ezdwg/: __init__.py  _core.pyi  document.py  entity.py  raw.py  render.py
src/io/: byte_reader.rs
src/objects/: handle.rs  mod.rs  object_header_r2000.rs  object_header_r2010.rs  object_locator.rs  object_record.rs  object_ref.rs  object_type.rs
tests/: test_ac1021_regression.py  test_attrib_attdef_minsert_document.py  test_dimension_common.py  test_hatch_leader_document.py  test_layer_color_overrides.py  test_r2007plus_point_circle_ellipse_regression.py  test_r2007plus_regression.py  test_read_versions.py  test_render_colors.py  test_spline_document.py  test_text_mtext_regression.py  test_versions.py
