[project]
name = "ezdwg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "neka-nat", email = "nekanat.stock@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]

[project.scripts]
ezdwg = "ezdwg:main"

[tool.maturin]
module-name = "ezdwg._core"
python-packages = ["ezdwg"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
